# WireEKF

./: .gitignore  ColumnMap.py  DataSetLoader.py  InteractiveViewer.py  ModelWrapper.py  README.md  SimModelAndTrackDLO.py  WireEKF.py  main.py  plot_datasets.py  pyproject.toml  x_init_history.csv
data1/bx-0.0_by-2.2_bz-0.0_fx-0.12_fy-0.10_fz-0.03tx-0.05_ty0.12_tz0.18/: xpbd_simulation.csv
data1/bx-0.0_by1.0_bz-0.0_fx-0.17_fy0.11_fz0.09tx0.13_ty-0.04_tz0.02/: xpbd_simulation.csv
data1/bx-0.1_by-0.0_bz0.0_fx-0.05_fy0.07_fz0.18tx-0.07_ty0.15_tz0.14/: xpbd_simulation.csv
data1/bx-0.1_by-0.8_bz0.2_fx0.13_fy0.03_fz-0.10tx-0.03_ty-0.18_tz-0.05/: xpbd_simulation.csv
data1/bx-0.1_by1.2_bz0.2_fx-0.18_fy0.20_fz0.13tx0.11_ty0.08_tz-0.20/: xpbd_simulation.csv
data1/bx-0.2_by-0.8_bz-0.2_fx0.08_fy0.11_fz-0.19tx0.02_ty-0.19_tz-0.18/: xpbd_simulation.csv
data1/bx-0.2_by-0.8_bz0.1_fx0.12_fy-0.16_fz0.04tx0.09_ty-0.02_tz-0.10/: xpbd_simulation.csv
data1/bx-0.2_by-1.0_bz-0.2_fx0.19_fy-0.01_fz-0.19tx-0.19_ty0.04_tz0.09/: xpbd_simulation.csv
data1/bx-0.2_by-1.9_bz0.1_fx0.03_fy0.10_fz0.11tx-0.13_ty0.19_tz0.18/: xpbd_simulation.csv
data1/bx-0.2_by0.4_bz0.1_fx0.02_fy0.20_fz-0.05tx0.15_ty-0.20_tz-0.05/: xpbd_simulation.csv
model/: compare_simulations.py  constraints.py  estimate_parameters.py  example.py  make_dataset.py  mix_model_test.py  quaternion_utils.py  requirements.txt  run_ekf.py  setup.py  sim_setup.py  trial_from_data.py  visualization.py  wire_ekf.py  wire_simulator.py  xpbd_core.cp312-win_amd64.pyd  xpbd_core.cpp
pressentation/: main.tex  speakernotes.md
(+117 files in other folders)
