[project]
name = "wireekf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpytorch>=1.15.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matlabengine==25.1.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
