[project]
name = "extendedkalmanfilter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pybind11>=3.0.4",
    "pyqt5>=5.15.11",
    "setuptools>=82.0.1",
]
